Atualizando o footer com o nome da empresa

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
     <footer class="bg-dark p-2 text-center">
         <div class="container">
-            <o class="text-white">Todos os direitos reservados @carcon</o>
+            <o class="text-white">Todos os direitos reservados @RastauraCar</o>
         </div>
     </footer>
 
